--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <button>J</button>
     <button>K</button>
 	</section>
-	<script src="js/index.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
